src/l7-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-viewer
  namespace: pf
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: bookinfo-productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/pf/sa/sleep
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
    to:
    - operation:
        methods: ["GET"]
